added games object which has a single relation to seasons (no relation to any players)
